openbullet2-web-client/src/app/main/components/config/config-debugger/config-debugger.component.scss
@import "../../../../../styles/variables.scss";

.logs-container {
    background-color: $bgSecondary;
    padding: 10px;
    min-width: 100%;
    height: 600px;
    overflow-y: auto;
    margin-top: 10px;
}

.log-message {
    display: block;
    font-family: Chivo Mono;
    margin-bottom: 5px;
    font-size: 14px;
}

